  	- Stereo display using side-by-side mode or shutter glasses
  	- Clipping planes
  	- storing and loading of BALLView project files
  	- support for drag and drop of molecular files
		- possibility to highlight the selected molecular items
  	- new move mode for (partial) structures (also much less CPU consumption)
  	- Esc key now switches to last used mode in Scene
  	- calculation of Ramachandran plots for proteins
  	- Python scripting
  		- Hotkey support for starting any (BALL-)Python command from BALLView
	  	- support to quit program from Python interpreter
  		- support for starting Python script from command line
  		- Benchmark scripts for BALLView


Fixed:
  - CygWin support was temporarily broken
  - fixed the Python support to work with an official SIP release (4.1.1)  
  - BALLView
		- improved support for MacOS
		- drasticaly increased performance for coloring of models
		- (hopefully) no more crashes from MDSimulations and minimizations, when strange energies occur
		- handling of light sources positions
	  - selection in MolecularControl with CTRL and SHIFT modifier
	  - several problems in Cartoon and Backbone model
		- several problems with POVRay export
	  - creation of models for several selected items
	  - overall cleanup of RegularDataWidgets
  	- export of PNGs could result in strange problems e.g. with empty images
	  - its now possible to create transparent wireframe and dot models
  	- PeptideDialog: deletion of sequence in entry field
  	- increased performance of SnapShot visualisation, especially for large numbers of SnapShots
  	- A click on the "default" button in Preferences now only works on currently selected page
		- multiple loading of the same file will create enumerated names for the Systems
		- it was not possible to reset the by-element coloring scheme to the default values 
		- issue with restoring window geometry on X11
		- MDS dialog: toggling export to trajectory file was broken